--- a/app/src/main/res/layout/astro_people_item.xml
+++ b/app/src/main/res/layout/astro_people_item.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="0dp"
+        android:layout_marginTop="4dp"
         android:fontFamily="sans-serif-condensed"
         android:textSize="28sp"
         android:textAlignment="center"
@@ -32,6 +33,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:contentDescription="null" />
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="2dp"
+        android:layout_margin="8dp"
+        android:layout_marginBottom="8dp"
+        android:background="@color/gray"
+        app:layout_constraintTop_toBottomOf="@+id/tv_name_astropeople"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 
 
