--- a/app/src/main/res/layout/astro_people_item.xml
+++ b/app/src/main/res/layout/astro_people_item.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/cl_astrospeople_item">
 
     <TextView
         android:id="@+id/tv_name_astropeople"
